--- a/app/globals.css
+++ b/app/globals.css
@@ -1,1 +1,150 @@
 @import 'tailwindcss';
+
+:root {
+  --evening-bg: #0A0A58;
+  --evening-mg: #10108B;
+  --evening-fg: #1515BE;
+
+  --dawn-dusk-bg: #1D0B62;
+  --dawn-dusk-mg: #68108B;
+  --dawn-dusk-fg: #BE4B15;
+
+  --day-bg: #BEFEFF;
+  --day-mg: #FFFFFF;
+  --day-fg: #FFCF6F;
+  
+  /* --evening-gradient: radial-gradient(397.67% 100% at 50.05% 0%, #1515BE 0%, #10108B 25%, #0A0A58 100%);
+  --dawn-dusk-gradient: radial-gradient(193.32% 43.14% at 50% 100%, #BE4B15 0%, #68108B 50%, #0A0A58 100%, #1D0B62 100%);
+  --day-gradient: radial-gradient(230.31% 100% at 50% 0%, #FFCF6F 0%, #FFFFFF 33.39%, #BEFEFF 99.99%); */
+}
+
+.noise {
+  background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.dev/svgjs" viewBox="0 0 700 700" width="700" height="700" opacity="1"><defs><filter id="nnnoise-filter" x="-20%" y="-20%" width="140%" height="140%" filterUnits="objectBoundingBox" primitiveUnits="userSpaceOnUse" color-interpolation-filters="linearRGB"><feTurbulence type="turbulence" baseFrequency="0.131" numOctaves="4" seed="15" stitchTiles="stitch" x="0%" y="0%" width="100%" height="100%" result="turbulence"></feTurbulence><feSpecularLighting surfaceScale="9" specularConstant="2.1" specularExponent="20" lighting-color="%23d0021b" x="0%" y="0%" width="100%" height="100%" in="turbulence" result="specularLighting"><feDistantLight azimuth="3" elevation="97"></feDistantLight></feSpecularLighting><feColorMatrix type="saturate" values="0" x="0%" y="0%" width="100%" height="100%" in="specularLighting" result="colormatrix"></feColorMatrix></filter></defs><rect width="700" height="700" fill="transparent"></rect><rect width="700" height="700" fill="%23d0021b" filter="url(%23nnnoise-filter)"></rect></svg>');
+  mix-blend-mode: multiply;
+  background-size: 125px;
+  opacity: 0.5;
+}
+
+@property --gradient-bg {
+  syntax: "<color>";
+  inherits: false;
+  initial-value: #00FFFF;
+}
+@property --gradient-mg {
+  syntax: "<color>";
+  inherits: false;
+  initial-value: #FFFF00;
+}
+@property --gradient-fg {
+  syntax: "<color>";
+  inherits: false;
+  initial-value: #FF00FF;
+}
+@property --gradient-fg-y {
+  syntax: "<percentage>";
+  inherits: false;
+  initial-value: 0%;
+}
+
+body {
+  position: relative;
+  min-height: 100vh;
+}
+@keyframes transitionEvening {
+  to {
+    --gradient-bg: var(--evening-bg);
+    --gradient-mg: var(--evening-mg);
+    --gradient-fg: var(--evening-fg);
+  }
+}
+@keyframes transitionDawnDusk {
+  to {
+    --gradient-bg: var(--dawn-dusk-bg);
+    --gradient-mg: var(--dawn-dusk-mg);
+    --gradient-fg: var(--dawn-dusk-fg);
+    --gradient-fg-y: 100%;
+  }
+}
+@keyframes transitionDay {
+  to {
+    --gradient-bg: var(--day-bg);
+    --gradient-mg: var(--day-mg);
+    --gradient-fg: var(--day-fg);
+    --gradient-fg-y: 0%;
+  }
+}
+
+.gradient-mg {
+  transition: all 5s ease-out;
+}
+
+.gradient-background.day {
+  .gradient-bg {
+    --gradient-bg: var(--day-bg);
+    background-color: var(--gradient-bg);
+    animation: transitionDay 5s ease-out;
+    animation-fill-mode: forwards;
+  }
+  .gradient-mg {
+    --gradient-mg: var(--day-mg);
+    background-color: red;
+    mask-image: linear-gradient(magenta, transparent);
+    mask-mode: alpha;
+    /* animation: transitionDay 2.5s ease-out;
+    animation-fill-mode: forwards; */
+  }
+  .gradient-fg {
+    --gradient-fg: var(--day-fg);
+    --gradient-fg-y: 0%;
+    background-image: radial-gradient(ellipse at 25% var(--gradient-fg-y), var(--gradient-fg) 5%, transparent 50%);
+    background-size: 250%;
+    animation: transitionDay 1.25s ease-out;
+    animation-fill-mode: forwards;
+  }
+
+}
+.gradient-background.dawn-dusk {
+  .gradient-bg {
+    --gradient-bg: var(--dawn-dusk-bg);
+    background-color: var(--gradient-bg);
+    animation: transitionDawnDusk 1.25s ease-out;
+    animation-fill-mode: forwards;
+  }
+  .gradient-mg {
+    --gradient-mg: var(--dawn-dusk-mg);
+    background-image: linear-gradient(to 100%, var(--gradient-mg), transparent);
+    animation: transitionDawnDusk 1.25s ease-out;
+    animation-fill-mode: forwards;
+  }
+  .gradient-fg {
+    --gradient-fg: var(--dawn-dusk-fg);
+    --gradient-fg-y: 100%;
+    background-image: radial-gradient(ellipse at 50% var(--gradient-fg-y), var(--gradient-fg) 5%, transparent 50%);
+    background-size: 250% 65%;
+    background-position: bottom center;
+    background-repeat: no-repeat;
+    animation: transitionDawnDusk 1.25s ease-out;
+    animation-fill-mode: forwards;
+  }
+}
+
+.gradient-background.evening {
+  .gradient-bg {
+    --gradient-bg: var(--evening-bg);
+    background-color: var(--gradient-bg);
+    animation: transitionEvening 1.25s ease-out;
+    animation-fill-mode: forwards;
+  }
+  .gradient-mg {
+    --gradient-mg: var(--evening-mg);
+    background-image: linear-gradient(to 100%, var(--gradient-mg), transparent);
+    animation: transitionEvening 1.25s ease-out;
+    animation-fill-mode: forwards;
+  }
+  .gradient-fg {
+    --gradient-fg: var(--evening-fg);
+    background-image: radial-gradient(ellipse at 25% var(--gradient-fg-y), var(--gradient-fg) 5%, transparent 50%);
+    animation: transitionEvening 1.25s ease-out;
+    animation-fill-mode: forwards;
+  }
+}
