--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,35 @@
 @import 'tailwindcss';
 
+@theme {
+    /* Paper colors */
+  --color-paper-blue: #CAE7ED;
+  --color-paper-blue-mid: rgb(149,207,219);
+  --color-paper-blue-dark: rgb(84,178,197);
+  
+  --color-paper-green: #A7D9B8;
+  --color-paper-green-mid: rgb(45,164,86);
+
+  --color-paper-pink: rgb(245,201,211);
+  --color-paper-pink-mid: rgb(235,147,167);
+  
+  --color-paper-purple: #AEADD7;
+  --color-paper-purple-mid: rgb(147,146,202);
+  --color-paper-purple-dark: rgb(94,92,175);
+
+  --color-paper-yellow: #FCF5BE;
+  --color-paper-yellow-mid: rgb(245,223,45);
+  --color-paper-yellow-dark: rgb(240,205,0);
+  
+  --color-paper-white: #FFFEF8;
+  --color-paper-black: #404040;
+
+  --color-accent-blue: #0D6193;
+  --color-accent-green: #4B7358;
+  --color-accent-red: #DA4942;
+  --color-accent-orange: #E9842F;
+  --color-accent-white: #E9E2C7;
+}
+
 :root {
   --evening-bg: #0A0A58;
   --evening-mg: #10108B;
@@ -16,6 +46,11 @@
   /* --evening-gradient: radial-gradient(397.67% 100% at 50.05% 0%, #1515BE 0%, #10108B 25%, #0A0A58 100%);
   --dawn-dusk-gradient: radial-gradient(193.32% 43.14% at 50% 100%, #BE4B15 0%, #68108B 50%, #0A0A58 100%, #1D0B62 100%);
   --day-gradient: radial-gradient(230.31% 100% at 50% 0%, #FFCF6F 0%, #FFFFFF 33.39%, #BEFEFF 99.99%); */
+}
+
+.wood-bg {
+  background-image: url('/assets/img/wood-bg.jpeg');
+  background-size: contain;
 }
 
 .noise {
