Add minor updates to .wood_bg

--- a/app/globals.css
+++ b/app/globals.css
@@ -23,6 +23,7 @@
   --color-paper-white: #FFFEF8;
   --color-paper-gray: #BFBFBF;
   --color-paper-black: #404040;
+  --color-paper-dark-black: rgb(35,35,35);
 
   --color-accent-blue: #0D6193;
   --color-accent-green: #4B7358;
